@startuml

title __SERVER's Class Diagram__\n


    class Game_CvsC_Server {
    }

  


    class Game_Server {
    }

  


    class Logs {
    }

  


    class MalformedString {
    }

  


    class Player_Servidor {
    }

  


    class Servidor {
    }

  

  Game_CvsC_Server o-- Game_CvsC_Server.states : estado1
  Game_CvsC_Server o-- Game_CvsC_Server.states : estado2
  Game_CvsC_Server o-- Logs : logs
  Game_CvsC_Server o-- utils.Protocolo : protocolo1
  Game_CvsC_Server o-- utils.Protocolo : protocolo2
  Game_Server o-- Game_Server.states : estado
  Game_Server o-- Logs : logs
  Game_Server o-- Player_Servidor : player_servidor
  Game_Server o-- utils.Protocolo : protocolo
  Servidor -- Game_CvsC_Server
  Servidor -- Game_Server
  Game_Server -- MalformedString
  Game_CvsC_Server -- MalformedString
  utils.Protocolo o-- utils.ComUtils
  Servidor -- Player_Servidor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
